"di_edid_parse failed: Operation not supported" when using "di-edid-decode", works correctly with "edid-decode" - BOE NE160QDM-NZ6 from Framework 16 Laptop
The Framework 16 Laptop has the display panel BOE NE160QDM-NZ6
I dumped the edid by doing
cat /sys/class/drm/card1-eDP-1/edid > /tmp/edid_BOE_NE160QDM-NZ6.bin
and attached the edid to this issue - edid_BOE_NE160QDM-NZ6.bin
When using "di-edid-decode" from https://gitlab.freedesktop.org/emersion/libdisplay-info version 0.1.1 via Arch Linux package "libdisplay-info" package version 0.1.1-3
as one of the following
cat /sys/class/drm/card1-eDP-1/edid | di-edid-decode
or
cat /tmp/edid_BOE_NE160QDM-NZ6.bin | di-edid-decode
the output is
di_edid_parse failed: Operation not supported
or using
sudo get-edid | di-edid-decode
The output is
This is read-edid version 3.0.2. Prepare for some fun.
Attempting to use i2c interface
No EDID on bus 0
No EDID on bus 1
No EDID on bus 2
No EDID on bus 3
No EDID on bus 4
No EDID on bus 5
No EDID on bus 6
No EDID on bus 7
No EDID on bus 8
No EDID on bus 9
No EDID on bus 10
No EDID on bus 12
No EDID on bus 13
No EDID on bus 14
No EDID on bus 15
No EDID on bus 16
No EDID on bus 17
No EDID on bus 18
No EDID on bus 19
No EDID on bus 21
3 potential busses found: 11 20 22
Will scan through until the first EDID is found.
Pass a bus number as an option to this program to go only for that one.
256-byte EDID successfully retrieved from i2c bus 11
Looks like i2c was successful. Have a good day.
di_edid_parse failed: Operation not supported
When using "parse-edid" from http://www.polypux.org/projects/read-edid/ version 3.0.2 via Arch Linux package "read-edid" package version 3.0.2-4
as one of the following
cat /sys/class/drm/card1-eDP-1/edid | parse-edid
or
cat /tmp/edid_BOE_NE160QDM-NZ6.bin | parse-edid
the output is
Checksum Correct
Section "Monitor"
Identifier ""
ModelName ""
VendorName "BOE"
# Monitor Manufactured week 48 of 2022
# EDID version 1.4
# Digital Display
DisplaySize 340 220
Gamma 2.20
Option "DPMS" "false"
#Extension block found. Parsing...
I only know about extension blocks of type 02h. PLEASE email me!
Something strange happened. Please contact the author,
Matthew Kern at <pyrophobicman@gmail.com>
or using
sudo get-edid | parse-edid
the output is
This is read-edid version 3.0.2. Prepare for some fun.
Attempting to use i2c interface
No EDID on bus 0
No EDID on bus 1
No EDID on bus 2
No EDID on bus 3
No EDID on bus 4
No EDID on bus 5
No EDID on bus 6
No EDID on bus 7
No EDID on bus 8
No EDID on bus 9
No EDID on bus 10
No EDID on bus 12
No EDID on bus 13
No EDID on bus 14
No EDID on bus 15
No EDID on bus 16
No EDID on bus 17
No EDID on bus 18
No EDID on bus 19
No EDID on bus 21
3 potential busses found: 11 20 22
Will scan through until the first EDID is found.
Pass a bus number as an option to this program to go only for that one.
Checksum Correct
256-byte EDID successfully retrieved from i2c bus 11
Looks like i2c was successful. Have a good day.
Section "Monitor"
Identifier ""
ModelName ""
VendorName "BOE"
# Monitor Manufactured week 48 of 2022
# EDID version 1.4
# Digital Display
DisplaySize 340 220
Gamma 2.20
Option "DPMS" "false"
#Extension block found. Parsing...
I only know about extension blocks of type 02h. PLEASE email me!
Something strange happened. Please contact the author,
Matthew Kern at <pyrophobicman@gmail.com>
=====================================================
Using "edid-decode" from https://git.linuxtv.org/edid-decode.git/ via Arch Linux User Repository package "edid-decode-git" commit https://git.linuxtv.org/edid-decode.git/commit/?id=3d635499e4aca3319f0796ba787213c981c5a770
as one of the following
cat /sys/class/drm/card1-eDP-1/edid | edid-decode
or
cat /tmp/edid_BOE_NE160QDM-NZ6.bin | edid-decode
The output is
edid-decode (hex):
00 ff ff ff ff ff ff 00 09 e5 c9 0b 00 00 00 00
30 20 01 04 a5 22 16 78 03 3d 35 ae 50 43 b1 25
0e 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 34 70 00 a0 a0 40 a0 60 30 20
f6 0c 59 d7 10 00 00 1a 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 fe 00 42
4f 45 20 43 51 0a 20 20 20 20 20 20 00 00 00 fe
00 4e 45 31 36 30 51 44 4d 2d 4e 5a 36 0a 01 0a
70 20 79 02 00 22 00 14 7f 0d 0c 85 ff 09 9f 00
2f 00 1f 00 3f 06 9f 00 3e 00 05 00 25 00 09 7f
0d 0c 7f 0d 0c 3c a5 80 81 00 13 72 1a 00 00 03
c1 3c a5 00 00 6a 42 6a 42 a5 00 2f aa 0c 21 01
1d 77 0d 6a 08 00 0a 40 06 88 e1 aa 50 3d 24 b1
51 d2 0e 02 35 54 b0 5c b0 5c cc 34 12 78 26 00
09 02 00 00 00 00 00 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 f7 90
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.4
Vendor & Product Identification:
Manufacturer: BOE
Model: 3017
Made in: week 48 of 2022
Basic Display Parameters & Features:
Digital display
Bits per primary color channel: 8
DisplayPort interface
Maximum image size: 34 cm x 22 cm
Gamma: 2.20
Supported color formats: RGB 4:4:4
First detailed timing includes the native pixel format and preferred refresh rate
Display supports continuous frequencies
Color Characteristics:
Red : 0.6796, 0.3154
Green: 0.2646, 0.6923
Blue : 0.1445, 0.0576
White: 0.3134, 0.3291
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 2560x1600 60.001671 Hz 16:10 105.603 kHz 287.240000 MHz (345 mm x 215 mm)
Hfront 48 Hsync 32 Hback 80 Hpol P
Vfront 63 Vsync 6 Vback 91 Vpol N
Empty Descriptor
Alphanumeric Data String: 'BOE CQ'
Alphanumeric Data String: 'NE160QDM-NZ6'
Extension blocks: 1
Checksum: 0x0a
----------------
Block 1, DisplayID Extension Block:
Version: 2.0
Extension Count: 0
Display Product Primary Use Case: None of the listed primary use cases; generic display
Video Timing Modes Type 7 - Detailed Timings Data Block:
DTD: 2560x1600 165.000000 Hz 16:10 290.400 kHz 789.888000 MHz (aspect 16:10, no 3D stereo, preferred)
Hfront 48 Hsync 32 Hback 80 Hpol N
Vfront 63 Vsync 6 Vback 91 Vpol N
Dynamic Video Timing Range Limits Data Block:
Minimum Pixel Clock: 789888 kHz
Maximum Pixel Clock: 789888 kHz
Minimum Vertical Refresh Rate: 60 Hz
Maximum Vertical Refresh Rate: 165 Hz
Seamless Dynamic Video Timing Support: Yes
CTA-861 DisplayID Data Block:
Vendor-Specific Data Block (AMD), OUI 00-00-1A:
Version: 3.193
Minimum Refresh Rate: 60 Hz
Maximum Refresh Rate: 165 Hz
Flags 1.x: 0x00
Flags 2.x: 0x00
Maximum luminance: 106 (496.743 cd/m^2)
Minimum luminance: 66 (0.333 cd/m^2)
Unknown: 0x6a 0x42
Display Parameters Data Block (0x21):
Image size: 344.7 mm x 215.4 mm
Display native pixel format: 2560x1600
Scan Orientation: Left to Right, Top to Bottom
Luminance Information: Guidance for the Source device
Color Information: CIE 1931
Audio Speaker Information: not integrated
Native Color Chromaticity:
Primary #1: (0.679932, 0.314941)
Primary #2: (0.264893, 0.691895)
Primary #3: (0.144775, 0.057861)
White Point: (0.312988, 0.328857)
Native Maximum Luminance (Full Coverage): 300.000000 cd/m^2
Native Maximum Luminance (10% Rectangular Coverage): 300.000000 cd/m^2
Native Minimum Luminance: 0.299805 cd/m^2
Native Color Depth: 10 bpc
Display Device Technology: Active Matrix LCD
Display Device Theme Preference: No Preference
Native Gamma EOTF: 2.20
Display Interface Features Data Block:
Supported bpc for RGB encoding: 8
Supported color space and EOTF standard combination 1: DCI-P3
Checksum: 0xf7
Checksum: 0x90
or using
sudo get-edid | edid-decode
the output is
This is read-edid version 3.0.2. Prepare for some fun.
Attempting to use i2c interface
No EDID on bus 0
No EDID on bus 1
No EDID on bus 2
No EDID on bus 3
No EDID on bus 4
No EDID on bus 5
No EDID on bus 6
No EDID on bus 7
No EDID on bus 8
No EDID on bus 9
No EDID on bus 10
No EDID on bus 12
No EDID on bus 13
No EDID on bus 14
No EDID on bus 15
No EDID on bus 16
No EDID on bus 17
No EDID on bus 18
No EDID on bus 19
No EDID on bus 21
3 potential busses found: 11 20 22
Will scan through until the first EDID is found.
Pass a bus number as an option to this program to go only for that one.
256-byte EDID successfully retrieved from i2c bus 11
Looks like i2c was successful. Have a good day.
edid-decode (hex):
00 ff ff ff ff ff ff 00 09 e5 c9 0b 00 00 00 00
30 20 01 04 a5 22 16 78 03 3d 35 ae 50 43 b1 25
0e 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 34 70 00 a0 a0 40 a0 60 30 20
f6 0c 59 d7 10 00 00 1a 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 fe 00 42
4f 45 20 43 51 0a 20 20 20 20 20 20 00 00 00 fe
00 4e 45 31 36 30 51 44 4d 2d 4e 5a 36 0a 01 0a
70 20 79 02 00 22 00 14 7f 0d 0c 85 ff 09 9f 00
2f 00 1f 00 3f 06 9f 00 3e 00 05 00 25 00 09 7f
0d 0c 7f 0d 0c 3c a5 80 81 00 13 72 1a 00 00 03
c1 3c a5 00 00 6a 42 6a 42 a5 00 2f aa 0c 21 01
1d 77 0d 6a 08 00 0a 40 06 88 e1 aa 50 3d 24 b1
51 d2 0e 02 35 54 b0 5c b0 5c cc 34 12 78 26 00
09 02 00 00 00 00 00 10 00 00 00 00 00 00 00 00
00 00 00 00 00 00 00 00 00 00 00 00 00 00 f7 90
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.4
Vendor & Product Identification:
Manufacturer: BOE
Model: 3017
Made in: week 48 of 2022
Basic Display Parameters & Features:
Digital display
Bits per primary color channel: 8
DisplayPort interface
Maximum image size: 34 cm x 22 cm
Gamma: 2.20
Supported color formats: RGB 4:4:4
First detailed timing includes the native pixel format and preferred refresh rate
Display supports continuous frequencies
Color Characteristics:
Red : 0.6796, 0.3154
Green: 0.2646, 0.6923
Blue : 0.1445, 0.0576
White: 0.3134, 0.3291
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 2560x1600 60.001671 Hz 16:10 105.603 kHz 287.240000 MHz (345 mm x 215 mm)
Hfront 48 Hsync 32 Hback 80 Hpol P
Vfront 63 Vsync 6 Vback 91 Vpol N
Empty Descriptor
Alphanumeric Data String: 'BOE CQ'
Alphanumeric Data String: 'NE160QDM-NZ6'
Extension blocks: 1
Checksum: 0x0a
----------------
Block 1, DisplayID Extension Block:
Version: 2.0
Extension Count: 0
Display Product Primary Use Case: None of the listed primary use cases; generic display
Video Timing Modes Type 7 - Detailed Timings Data Block:
DTD: 2560x1600 165.000000 Hz 16:10 290.400 kHz 789.888000 MHz (aspect 16:10, no 3D stereo, preferred)
Hfront 48 Hsync 32 Hback 80 Hpol N
Vfront 63 Vsync 6 Vback 91 Vpol N
Dynamic Video Timing Range Limits Data Block:
Minimum Pixel Clock: 789888 kHz
Maximum Pixel Clock: 789888 kHz
Minimum Vertical Refresh Rate: 60 Hz
Maximum Vertical Refresh Rate: 165 Hz
Seamless Dynamic Video Timing Support: Yes
CTA-861 DisplayID Data Block:
Vendor-Specific Data Block (AMD), OUI 00-00-1A:
Version: 3.193
Minimum Refresh Rate: 60 Hz
Maximum Refresh Rate: 165 Hz
Flags 1.x: 0x00
Flags 2.x: 0x00
Maximum luminance: 106 (496.743 cd/m^2)
Minimum luminance: 66 (0.333 cd/m^2)
Unknown: 0x6a 0x42
Display Parameters Data Block (0x21):
Image size: 344.7 mm x 215.4 mm
Display native pixel format: 2560x1600
Scan Orientation: Left to Right, Top to Bottom
Luminance Information: Guidance for the Source device
Color Information: CIE 1931
Audio Speaker Information: not integrated
Native Color Chromaticity:
Primary #1: (0.679932, 0.314941)
Primary #2: (0.264893, 0.691895)
Primary #3: (0.144775, 0.057861)
White Point: (0.312988, 0.328857)
Native Maximum Luminance (Full Coverage): 300.000000 cd/m^2
Native Maximum Luminance (10% Rectangular Coverage): 300.000000 cd/m^2
Native Minimum Luminance: 0.299805 cd/m^2
Native Color Depth: 10 bpc
Display Device Technology: Active Matrix LCD
Display Device Theme Preference: No Preference
Native Gamma EOTF: 2.20
Display Interface Features Data Block:
Supported bpc for RGB encoding: 8
Supported color space and EOTF standard combination 1: DCI-P3
Checksum: 0xf7
Checksum: 0x90